--- a/Capstone_project_FeliRuiz_pythonNB.ipynb
+++ b/Capstone_project_FeliRuiz_pythonNB.ipynb
@@ -326,8 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
+    "#Here I am creating a dataframe from the read csv file\n",
     "filter_df = pd.DataFrame(Filtered)"
    ]
   },
@@ -359,16 +358,10 @@
     }
    ],
    "source": [
+    "#WHAT I did here is split the objects in the pad column so that I could manipulate the data by disease\n",
     "pad_column=filter_df[\"pad\"]\n",
-    "pad_column"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#pad_column\n",
+    "\n",
     "pad_only_list=[]\n",
     "pad_number_list=[]\n",
     "for item in filter_df[\"pad\"]:\n",
@@ -378,317 +371,8 @@
     "    pad_only_list.append(pad_only)\n",
     "    pad_number_list.append(pad_number)\n",
     "#pad_number_list \n",
-    "#pad_only_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pad</th>\n",
-       "      <th>person_number_anon</th>\n",
-       "      <th>date_birth</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>chemo</th>\n",
-       "      <th>date_pad</th>\n",
-       "      <th>type_probe</th>\n",
-       "      <th>p_r</th>\n",
-       "      <th>p_t</th>\n",
-       "      <th>p_n</th>\n",
-       "      <th>p_m</th>\n",
-       "      <th>p_l</th>\n",
-       "      <th>p_v</th>\n",
-       "      <th>p_pn</th>\n",
-       "      <th>date_death</th>\n",
-       "      <th>comments</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Ampulla Ac|124</td>\n",
-       "      <td>PN1</td>\n",
-       "      <td>3/5/1936</td>\n",
-       "      <td>m</td>\n",
-       "      <td>y</td>\n",
-       "      <td>4/26/2005</td>\n",
-       "      <td>r</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4/13/2007</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Ampulla Ac|173</td>\n",
-       "      <td>PN2</td>\n",
-       "      <td>11/10/1939</td>\n",
-       "      <td>m</td>\n",
-       "      <td>y</td>\n",
-       "      <td>1/21/2010</td>\n",
-       "      <td>r</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>x</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8/30/2012</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Ampulla Ac|177</td>\n",
-       "      <td>PN3</td>\n",
-       "      <td>5/27/1917</td>\n",
-       "      <td>f</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/20/2005</td>\n",
-       "      <td>b</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5/28/2006</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Ampulla Ac|200</td>\n",
-       "      <td>PN4</td>\n",
-       "      <td>5/29/1932</td>\n",
-       "      <td>f</td>\n",
-       "      <td>n</td>\n",
-       "      <td>2/9/2012</td>\n",
-       "      <td>b</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>12/16/2012</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Ampulla Ac|225</td>\n",
-       "      <td>PN5</td>\n",
-       "      <td>11/23/1936</td>\n",
-       "      <td>m</td>\n",
-       "      <td>n</td>\n",
-       "      <td>4/18/2011</td>\n",
-       "      <td>r</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>x</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8/14/2011</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>386</td>\n",
-       "      <td>Perihilary Ac|419</td>\n",
-       "      <td>PN359</td>\n",
-       "      <td>12/8/1975</td>\n",
-       "      <td>m</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6/27/2011</td>\n",
-       "      <td>b</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7/20/2012</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>387</td>\n",
-       "      <td>Perihilary Ac|437</td>\n",
-       "      <td>PN360</td>\n",
-       "      <td>2/17/1932</td>\n",
-       "      <td>f</td>\n",
-       "      <td>n</td>\n",
-       "      <td>12/10/2008</td>\n",
-       "      <td>r</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>x</td>\n",
-       "      <td>x</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>388</td>\n",
-       "      <td>Perihilary Ac|6</td>\n",
-       "      <td>PN361</td>\n",
-       "      <td>4/13/1957</td>\n",
-       "      <td>f</td>\n",
-       "      <td>n</td>\n",
-       "      <td>11/28/2011</td>\n",
-       "      <td>r</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>389</td>\n",
-       "      <td>Perihilary Ac|7</td>\n",
-       "      <td>PN361</td>\n",
-       "      <td>4/13/1957</td>\n",
-       "      <td>f</td>\n",
-       "      <td>n</td>\n",
-       "      <td>11/28/2011</td>\n",
-       "      <td>r</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>390</td>\n",
-       "      <td>Perihilary Ac|9</td>\n",
-       "      <td>PN362</td>\n",
-       "      <td>11/7/1944</td>\n",
-       "      <td>m</td>\n",
-       "      <td>y</td>\n",
-       "      <td>10/7/2009</td>\n",
-       "      <td>b</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>12/14/2013</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>391 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   pad person_number_anon  date_birth gender chemo  \\\n",
-       "0       Ampulla Ac|124                PN1    3/5/1936      m     y   \n",
-       "1       Ampulla Ac|173                PN2  11/10/1939      m     y   \n",
-       "2       Ampulla Ac|177                PN3   5/27/1917      f   NaN   \n",
-       "3       Ampulla Ac|200                PN4   5/29/1932      f     n   \n",
-       "4       Ampulla Ac|225                PN5  11/23/1936      m     n   \n",
-       "..                 ...                ...         ...    ...   ...   \n",
-       "386  Perihilary Ac|419              PN359   12/8/1975      m   NaN   \n",
-       "387  Perihilary Ac|437              PN360   2/17/1932      f     n   \n",
-       "388    Perihilary Ac|6              PN361   4/13/1957      f     n   \n",
-       "389    Perihilary Ac|7              PN361   4/13/1957      f     n   \n",
-       "390    Perihilary Ac|9              PN362   11/7/1944      m     y   \n",
-       "\n",
-       "       date_pad type_probe  p_r  p_t  p_n  p_m  p_l  p_v  p_pn  date_death  \\\n",
-       "0     4/26/2005          r  0.0    3    1  NaN  NaN  NaN   NaN   4/13/2007   \n",
-       "1     1/21/2010          r  0.0    1    0    x    1    0   NaN   8/30/2012   \n",
-       "2     9/20/2005          b  NaN  NaN  NaN  NaN  NaN  NaN   NaN   5/28/2006   \n",
-       "3      2/9/2012          b  NaN  NaN  NaN  NaN  NaN  NaN   NaN  12/16/2012   \n",
-       "4     4/18/2011          r  0.0    2    0    x    1    0   NaN   8/14/2011   \n",
-       "..          ...        ...  ...  ...  ...  ...  ...  ...   ...         ...   \n",
-       "386   6/27/2011          b  NaN  NaN  NaN  NaN  NaN  NaN   NaN   7/20/2012   \n",
-       "387  12/10/2008          r  0.0    3    x    x    0    0   NaN         NaN   \n",
-       "388  11/28/2011          r  0.0    2    0  NaN    0    0   1.0         NaN   \n",
-       "389  11/28/2011          r  0.0    2    0  NaN    0    0   1.0         NaN   \n",
-       "390   10/7/2009          b  NaN  NaN  NaN  NaN  NaN  NaN   NaN  12/14/2013   \n",
-       "\n",
-       "     comments  \n",
-       "0         NaN  \n",
-       "1         NaN  \n",
-       "2         NaN  \n",
-       "3         NaN  \n",
-       "4         NaN  \n",
-       "..        ...  \n",
-       "386       NaN  \n",
-       "387       NaN  \n",
-       "388       NaN  \n",
-       "389       NaN  \n",
-       "390       NaN  \n",
-       "\n",
-       "[391 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "#pad_only_list\n",
+    "\n",
     "filter_df"
    ]
   },
@@ -698,6 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Now I am adding the list of disease and number associate with that disease to a separate column\n",
     "filter_df[\"pad_only\"]=pad_only_list\n",
     "filter_df[\"pad_number\"]=pad_number_list"
    ]
@@ -1022,6 +707,7 @@
     }
    ],
    "source": [
+    "#Now that I added both the disease(\"pad_only\") and pad number, I will drop the \"pad\" column\n",
     "New_filter_df=filter_df.drop(columns=['pad'])\n",
     "New_filter_df"
    ]
